--- a/model_train_code/hack_to_track.ipynb
+++ b/model_train_code/hack_to_track.ipynb
@@ -6754,9 +6754,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "venv",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -6768,7 +6768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
